# rust_iot

./: .gitignore  .mise.toml  Cargo.toml  README.md  build.rs  todo.txt
.cargo/: config.toml
crates/services/: Cargo.toml
crates/services/src/: health.rs  led.rs  lib.rs
src/: main.rs  scanner.rs
