[workspace]
resolver = "2"
members = [
  "bin/iot",
  "bin/cli"
]

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.86"

[workspace.dependencies]
btleplug = "0.11.8"
embassy-executor = "0.9.1"
esp-bootloader-esp-idf = "0.4.0"
esp-backtrace = { version = "0.18.1", features = [ "panic-handler", "println" ] }
esp-hal = { version = "1.0.0", features = [ "unstable" ] }
esp-alloc = { version = "0.9.0" }
esp-println = { version = "0.16.0", features = ["log-04"] }
esp-radio = { version = "0.17.0", features = ["ble", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio", "log-04"] }
trouble-host = { version = "0.5.0", features = ["default-packet-pool-mtu-255", "scan", "log"] }
bt-hci = { version = "0.6" }
embassy-futures = "0.1.1"
embassy-time = "0.5"
heapless = "0.9"
log = { version = "0.4" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false
