[package]
name = "services"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
embassy-sync = { workspace = true }
static_cell = { workspace = true }
trouble-host = { workspace = true, features = ["default-packet-pool-mtu-255", "scan", "log", "gatt"] }
uuid = { version = "1.19.0", default-features = false }
